# mcp

./: Cargo.toml  README.md
.cargo/: config.toml
examples/: claude.json  register.sh
scripts/: backup.sh  configure.sh  entrypoint.sh  install.sh  restore.sh  update.sh
src/: abi_export.rs  client.rs  context7.rs  lib.rs  lifecycle.rs  sync.rs  tools.rs  types.rs
